Refactor http-based alarm plugins and extract common logic to `HttpAlarmCallback`