@@ -18,77 +18,50 @@
 
 package org.apache.skywalking.oap.server.core.alarm.provider.dingtalk;
 
-import io.netty.handler.codec.http.HttpHeaderValues;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.http.HttpHeaders;
-import org.apache.http.HttpStatus;
-import org.apache.http.StatusLine;
-import org.apache.http.client.config.RequestConfig;
-import org.apache.http.client.methods.CloseableHttpResponse;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.entity.ContentType;
-import org.apache.http.entity.StringEntity;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClients;
-import org.apache.http.util.EntityUtils;
-import org.apache.skywalking.oap.server.library.util.StringUtil;
-import org.apache.skywalking.oap.server.core.alarm.AlarmCallback;
 import org.apache.skywalking.oap.server.core.alarm.AlarmMessage;
+import org.apache.skywalking.oap.server.core.alarm.HttpAlarmCallback;
 import org.apache.skywalking.oap.server.core.alarm.provider.AlarmRulesWatcher;
+import org.apache.skywalking.oap.server.library.util.StringUtil;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import java.io.IOException;
 import java.io.UnsupportedEncodingException;
+import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.util.Base64;
 import java.util.List;
+import java.util.Map;
 
 /**
  * Use SkyWalking alarm dingtalk webhook API.
  */
 @Slf4j
-public class DingtalkHookCallback implements AlarmCallback {
-
-    private static final int HTTP_CONNECT_TIMEOUT = 1000;
-    private static final int HTTP_CONNECTION_REQUEST_TIMEOUT = 1000;
-    private static final int HTTP_SOCKET_TIMEOUT = 10000;
-    private AlarmRulesWatcher alarmRulesWatcher;
-    private RequestConfig requestConfig;
-
-    public DingtalkHookCallback(final AlarmRulesWatcher alarmRulesWatcher) {
-        this.alarmRulesWatcher = alarmRulesWatcher;
-        this.requestConfig = RequestConfig.custom()
-                .setConnectTimeout(HTTP_CONNECT_TIMEOUT)
-                .setConnectionRequestTimeout(HTTP_CONNECTION_REQUEST_TIMEOUT)
-                .setSocketTimeout(HTTP_SOCKET_TIMEOUT)
-                .build();
-    }
+@RequiredArgsConstructor
+public class DingtalkHookCallback extends HttpAlarmCallback {
+    private final AlarmRulesWatcher alarmRulesWatcher;
 
     /**
      * Send alarm message if the settings not empty
      */
     @Override
-    public void doAlarm(List<AlarmMessage> alarmMessages) {
-        if (this.alarmRulesWatcher.getDingtalkSettings() == null || this.alarmRulesWatcher.getDingtalkSettings().getWebhooks().isEmpty()) {
+    public void doAlarm(List<AlarmMessage> alarmMessages) throws Exception {
+        if (alarmRulesWatcher.getDingtalkSettings() == null || alarmRulesWatcher.getDingtalkSettings().getWebhooks().isEmpty()) {
             return;
         }
-        try (CloseableHttpClient httpClient = HttpClients.custom().build()) {
-            DingtalkSettings dingtalkSettings = this.alarmRulesWatcher.getDingtalkSettings();
-            dingtalkSettings.getWebhooks().forEach(webHookUrl -> {
-                String url = getUrl(webHookUrl);
-                alarmMessages.forEach(alarmMessage -> {
-                    String requestBody = String.format(
-                            this.alarmRulesWatcher.getDingtalkSettings().getTextTemplate(), alarmMessage.getAlarmMessage()
-                    );
-                    sendAlarmMessage(httpClient, url, requestBody);
-                });
-            });
-        } catch (IOException e) {
-            log.error(e.getMessage(), e);
+        final var dingtalkSettings = alarmRulesWatcher.getDingtalkSettings();
+        for (final var webHookUrl : dingtalkSettings.getWebhooks()) {
+            final var url = getUrl(webHookUrl);
+            for (final var alarmMessage : alarmMessages) {
+                final var requestBody = String.format(
+                        alarmRulesWatcher.getDingtalkSettings().getTextTemplate(), alarmMessage.getAlarmMessage()
+                );
+                post(URI.create(url), requestBody, Map.of());
+            }
         }
     }
 
@@ -107,7 +80,7 @@ public class DingtalkHookCallback implements AlarmCallback {
      */
     private String getSignUrl(DingtalkSettings.WebHookUrl webHookUrl) {
         try {
-            Long timestamp = System.currentTimeMillis();
+            final var timestamp = System.currentTimeMillis();
             return String.format("%s&timestamp=%s&sign=%s", webHookUrl.getUrl(), timestamp, sign(timestamp, webHookUrl.getSecret()));
         } catch (NoSuchAlgorithmException | UnsupportedEncodingException | InvalidKeyException e) {
             throw new RuntimeException(e);
@@ -118,42 +91,11 @@ public class DingtalkHookCallback implements AlarmCallback {
      * Sign webhook url using HmacSHA256 algorithm
      */
     private String sign(final Long timestamp, String secret) throws NoSuchAlgorithmException, UnsupportedEncodingException, InvalidKeyException {
-        String stringToSign = timestamp + "\n" + secret;
-        Mac mac = Mac.getInstance("HmacSHA256");
+        final var stringToSign = timestamp + "\n" + secret;
+        final var mac = Mac.getInstance("HmacSHA256");
         mac.init(new SecretKeySpec(secret.getBytes(StandardCharsets.UTF_8), "HmacSHA256"));
-        byte[] signData = mac.doFinal(stringToSign.getBytes(StandardCharsets.UTF_8));
-        return URLEncoder.encode(new String(Base64.getEncoder().encode(signData)), StandardCharsets.UTF_8.name());
+        final var signData = mac.doFinal(stringToSign.getBytes(StandardCharsets.UTF_8));
+        return URLEncoder.encode(new String(Base64.getEncoder().encode(signData)), StandardCharsets.UTF_8);
     }
 
-    /**
-     * Send alarm message to remote endpoint
-     */
-    private void sendAlarmMessage(CloseableHttpClient httpClient, String url, String requestBody) {
-        CloseableHttpResponse httpResponse = null;
-        try {
-            HttpPost post = new HttpPost(url);
-            post.setConfig(requestConfig);
-            post.setHeader(HttpHeaders.ACCEPT, HttpHeaderValues.APPLICATION_JSON.toString());
-            post.setHeader(HttpHeaders.CONTENT_TYPE, HttpHeaderValues.APPLICATION_JSON.toString());
-            StringEntity entity = new StringEntity(requestBody, ContentType.APPLICATION_JSON);
-            post.setEntity(entity);
-            httpResponse = httpClient.execute(post);
-            StatusLine statusLine = httpResponse.getStatusLine();
-            if (statusLine != null && statusLine.getStatusCode() != HttpStatus.SC_OK) {
-                log.error("send dingtalk alarm to {} failure. Response code: {}, Response content: {}", url, statusLine.getStatusCode(),
-                        EntityUtils.toString(httpResponse.getEntity()));
-            }
-        } catch (Throwable e) {
-            log.error("send dingtalk alarm to {} failure.", url, e);
-        } finally {
-            if (httpResponse != null) {
-                try {
-                    httpResponse.close();
-                } catch (IOException e) {
-                    log.error(e.getMessage(), e);
-                }
-
-            }
-        }
-    }
 }
